@@ -1,3 +1,61 @@
 Deep Fij
 ==================
 
+#### JVM Options
+```
+-Xms512M
+```
+```
+-Xmx1024M
+```
+```
+-Xss1M
+```
+```
+-XX:+CMSClassUnloadingEnabled
+```
+```
+-XX:MaxPermSize=256M
+```
+```
+-Dadmin.user=
+```
+User who has admin priveleges
+```
+-Daws.region=us-east-1
+```
+```
+-Daws.accessKeyId=
+```
+```
+-Daws.secretKey=
+```
+```
+-Dplay.mailer.user=
+```
+```
+-Dplay.mailer.password=
+```
+```
+-Dplay.mailer.from=admin@fijimf.com
+```
+```
+-Dlogger.resource=logback.xml
+```
+```
+-Dapplication.mode=DEV
+```
+```
+-Dstats.deepfij.user=
+```
+User for MySQL for Spark access
+```
+-Dstats.deepfij.password=
+```
+Password for MySQL for Spark access
+
+#### Environment
+```
+SPARK_DEEPFIJDB_PASSWORD=
+SPARK_DEEPFIJDB_USER=
+```
